FTP-1105 : JS Features: Array, DOM, this,Async JS, OOP and misc features

--- a/index.html
+++ b/index.html
@@ -1,17 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <h1>Mastering Javascript.</h1>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="item-container">
+      <h1>Mastering Javascript.</h1>
+      <ul id="list-items">
+        <li class="item item1" id="item1">Item 1</li>
+        <li class="item item2" id="item2">Item 2</li>
+        <li class="item item3" id="item3">Item 3</li>
+        <li class="item item4" id="item4">Item 4</li>
+        <li class="item item5" id="item5">Item 4</li>
+        <li class="item item6" id="item6">Item 6</li>
+        <li class="item item7" id="item7">Item 7</li>
+        <li class="item item8" id="item8">Item 8</li>
+      </ul>
+    </div>
 
-    <script src='script.js'></script>
-    <script src='operators.js'></script>
-    <script src='control-flow.js'></script>
-    <script src='object.js'></script>
-</body>
+    <p id="demoPara">
+      This element has extra spacing and contains <span>a span element</span>.
+      Also, the second span is hidden:
+      <span style="display: none">I am hidden</span>
+    </p>
+
+    <div class="box grandparent">
+      Grandparent
+      <div class="box parent">
+        Parent
+        <div class="box child">Child</div>
+      </div>
+    </div>
+
+    <!-- <script src="script.js"></script>
+    <script src="operators.js"></script>
+    <script src="control-flow.js"></script>
+    <script src="object.js"></script>
+    <script src="es6.js"></script>
+    <script src="array.js"></script>
+    <script src="dom.js"></script>
+    <script src="event.js"></script>
+    <script src="this.js"></script> -->
+    <!-- <script src="callback.js"></script> -->
+    <script src="OOP.js"></script>
+    <script src="list-binding.js"></script>
+    <script src="misc-concepts.js"></script>
+  </body>
 </html>
